# alda-medical

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  eeg_chart.cpp  eeg_chart.h  eeg_core.cpp  eeg_core.h  eeg_theme.h  eeg_toolbar.cpp  eeg_toolbar.h  main.cpp  mainwindow.cpp  mainwindow.h
Drivers NVX136 MC01 MC02/Driver mc1/mc/: MediaConverter.cat  MediaConverter.inf
Drivers NVX136 MC01 MC02/Driver mc1/nvx132/: NVX132.cat  NVX132.inf
Drivers NVX136 MC01 MC02/Driver mc2/: MediaConverter.cat  MediaConverter.inf
UI/button/: button.cpp  button.h
UI/chart/: chart.cpp  chart.h  chart_data.h
UI/dynamic_form/: dynamic_form.cpp  dynamic_form.h  fields.cpp  fields.h
UI/impedance_range/: impedance_range.cpp  impedance_range.h
UI/popup_message/: popup_message.cpp  popup_message.h
UI/screen_header/: screen_header.h
UI/tabbar/: tabbar.cpp  tabbar.h
UI/toast/: toast.cpp  toast.h
UI/toolbar/: toolbar.cpp  toolbar.h
core/: app_state_manager.cpp  app_state_manager.h  core.cpp  core.h
core/router/: IScreen.h  app_router.h
models/: base_model.h  channel.h  channels_group.h  mvp_base_model.h  patient.h  patient_info.h  session.h
screens/channels_selector_modal/: channel_selector_modal.cpp  channel_selector_modal.h
services/: channel_management_service.cpp  channel_management_service.h  secure_storage_service.h
views/admin_modal/: admin_login_modal.h
views/admin_settings/: admin_settings_model.h  admin_settings_presenter.cpp  admin_settings_presenter.h  admin_settings_screen.h  admin_settings_view.cpp  admin_settings_view.h
views/admin_settings/tabs/channels_config/: admin_settings_view.h  channels_config_model.h  channels_config_presenter.cpp  channels_config_presenter.h  channels_config_view.cpp  channels_config_view.h
views/cap_placement/: cap_placement_header.h  cap_placement_model.h  cap_placement_presenter.cpp  cap_placement_presenter.h  cap_placement_screen.h  cap_placement_view.cpp  cap_placement_view.h
views/channels_selector_modal/: channels_group_model.cpp  channels_group_model.h  channels_group_presenter.cpp  channels_group_presenter.h  channels_group_view.cpp  channels_group_view.h
views/impedance_viewer/: impedance_viewer_header.cpp  impedance_viewer_header.h  impedance_viewer_helper.cpp  impedance_viewer_helper.h  impedance_viewer_model.cpp  impedance_viewer_model.h  impedance_viewer_presenter.cpp  impedance_viewer_presenter.h  impedance_viewer_screen.cpp  impedance_viewer_screen.h  impedance_viewer_toolbar.h  impedance_viewer_view.cpp  impedance_viewer_view.h
views/monitoring/: monitoring_model.cpp  monitoring_model.h  monitoring_presenter.cpp  monitoring_presenter.h  monitoring_screen.cpp  monitoring_screen.h  monitoring_toolbar.cpp  monitoring_toolbar.h  monitoring_view.cpp  monitoring_view.h
views/user_settings/: user_settings_header.h  user_settings_model.h  user_settings_presenter.cpp  user_settings_presenter.h  user_settings_screen.cpp  user_settings_screen.h  user_settings_view.cpp  user_settings_view.h
widgets/muti_select/: multi_select.cpp  multi_select.h
